# worldforge

./: .gitignore  CLAUDE.md  DESIGN_NOTES.md  LESSONS_LEARNED.md  PROGRESS_LOG.md  README.md  STRUCTURE.md  TUTORIAL.md  pyproject.toml
src/worldforge/: __init__.py  agent.py  cli.py  rl.py  simulation.py
src/worldforge/behaviors/: __init__.py  decision.py  lifecycle.py  memory.py  social.py  state_machine.py
src/worldforge/core/: __init__.py  clock.py  context.py  event_queue.py  exceptions.py  registry.py
src/worldforge/distributions/: __init__.py  base.py  conditional.py  continuous.py  correlated.py  discrete.py  mixture.py  temporal.py
src/worldforge/environments/: __init__.py  base.py  continuous.py  grid.py  market.py  network.py  temporal.py
src/worldforge/events/: __init__.py  base.py  external.py  interaction.py  lifecycle.py
src/worldforge/probes/: __init__.py  aggregator.py  base.py  event_log.py  snapshot.py  timeseries.py
src/worldforge/runner/: __init__.py  batch.py  parallel.py  sequential.py
src/worldforge/scenarios/: __init__.py  ecommerce.py  energy_grid.py  epidemic.py  fintech.py  game_economy.py  iot_timeseries.py  org_dynamics.py  (+5 more)
tests/: conftest.py
tests/benchmarks/: test_performance.py
tests/integration/: test_basic_sim.py  test_scenarios.py
tests/unit/: test_agent.py  test_batch_runner.py  test_behaviors.py  test_clock.py  test_context.py  test_data_integrity.py  test_distributions.py  test_environments.py  test_event_queue.py  test_new_scenarios.py  test_output.py  test_probes.py  test_result_extensions.py  test_time.py
(+4 files in other folders)
