[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "worldforge"
version = "0.1.0"
description = "Industrial-grade multi-paradigm simulation framework for Python"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
keywords = ["simulation", "agent-based", "discrete-event",
            "synthetic-data", "abm", "des", "monte-carlo"]
dependencies = ["numpy>=1.26", "faker>=24.0"]

[project.optional-dependencies]
pandas  = ["pandas>=2.0"]
polars  = ["polars>=0.20"]
sql     = ["sqlalchemy>=2.0"]
network = ["networkx>=3.0"]
science = ["scipy>=1.11"]
viz     = ["matplotlib>=3.7"]
rl      = ["gymnasium>=0.29"]
all     = ["pandas>=2.0", "polars>=0.20", "sqlalchemy>=2.0",
           "networkx>=3.0", "scipy>=1.11", "matplotlib>=3.7"]
dev     = ["pytest>=8.0", "pytest-cov", "mypy>=1.10", "ruff>=0.4",
           "hypothesis>=6.0", "pytest-benchmark"]

[project.scripts]
worldforge = "worldforge.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/worldforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py313"
